--- a/src/app/modules/home/pages/home-page/home-page.component.html
+++ b/src/app/modules/home/pages/home-page/home-page.component.html
@@ -1,2 +1,5 @@
 <!-- <p>home-page works!</p> -->
 <app-side-bar></app-side-bar>
+
+<!-- segundo router outlet - a nivel HOME -->
+<router-outlet name="child"></router-outlet>
