--- a/src/app/modules/home/pages/home-page/home-page.component.css
+++ b/src/app/modules/home/pages/home-page/home-page.component.css
@@ -1,3 +1,9 @@
-p {
+/* p {
   color: rebeccapurple
-}
+} */
+ .home-wrapper {
+  margin-left: 17.5rem;
+  background-color: rgb(23,23,26);
+  background: linear-gradient(90deg, rgba(23, 23, 26, 1) 44%, rgba(24, 24, 24, 1));
+  min-height: 100svh;
+ }
