--- a/src/app/modules/home/pages/home-page/home-page.component.html
+++ b/src/app/modules/home/pages/home-page/home-page.component.html
@@ -1,5 +1,6 @@
 <!-- <p>home-page works!</p> -->
 <app-side-bar></app-side-bar>
+<app-media-player></app-media-player>
 
 <div class="home-wrapper">
   <!-- segundo router outlet - a nivel HOME -->
