link different components and use Input decorator

--- a/src/app/modules/tracks/pages/tracks-page/tracks-page.component.html
+++ b/src/app/modules/tracks/pages/tracks-page/tracks-page.component.html
@@ -1,1 +1,7 @@
-<p>tracks-page works!</p>
+<div class="tracks-page">
+  <!-- seccion TOP - cards de reproduccion pequenos -->
+  <app-generic-section [title]="'Listen to the best music ever!'"></app-generic-section>
+
+  <!-- section BOTTOM - cards de reproduccion grandes, cuadrados -->
+  <app-generic-section [title]="'Top tending playlist'"></app-generic-section>
+</div>
