--- a/src/app/shared/components/side-bar/side-bar.component.html
+++ b/src/app/shared/components/side-bar/side-bar.component.html
@@ -1,7 +1,7 @@
 <div class="side-bar">
   <div><i class="uil uil-ellipsis-h"></i></div>
   <ul class="side-bar__list list-one">
-      <li *ngFor="let item of mainMenu.defaultOptions" >
+      <li *ngFor="let item of mainMenu.defaultOptions" [routerLink]="item.router" >
           <div class="list-wrapper-item">
             <i class="uil {{item.icon}}"></i>
               <span class="side-bar__list list-label">{{item.name}}</span>
