--- a/src/app/shared/components/play-list-body/play-list-body.component.html
+++ b/src/app/shared/components/play-list-body/play-list-body.component.html
@@ -1,13 +1,13 @@
 <div class="play-list-body">
   <ul class="play-list-table-header">
-      <li>Nombre ❤</li>
-      <li>álbum 🆗</li>
-      <li>fecha agregado 😁</li>
+      <li (click)="changeSort('name')">Nombre ❤</li>
+      <li (click)="changeSort('album')">álbum 🆗</li>
+      <li>fecha agregado</li>
       <li><i class="uil uil-clock-eight"></i></li>
   </ul>
 
   <!-- el * significa que son Directivas ESTRUCTURALES: afectan la estructura del HTML -->
-  <ul class="play-list-rows" *ngFor="let track of tracks">
+  <ul class="play-list-rows" *ngFor="let track of tracks | orderList:optionSort.property:optionSort.order">
       <li class="track-name">
           <ng-container *ngTemplateOutlet="coverSection;context:{track:track}"></ng-container>
           <!-- las variables del obj 'context' estan disponibles para declaraciones 'let' del template -->
