--- a/src/app/shared/components/card-player/card-player.component.html
+++ b/src/app/shared/components/card-player/card-player.component.html
@@ -1,35 +1,43 @@
 <!--------- Diseño del mode (small)----------->
-<div *ngIf="mode==='small'" class="card-player player-small">
-  <img [src]="track?.cover" [alt]="track?.name" class="cover">
+<div *ngIf="mode === 'small'" class="card-player player-small">
+  <img [src]="track?.cover" [alt]="track?.name" class="cover" />
   <div class="content-player">
-      {{track?.name}}
+    {{ track?.name }}
   </div>
   <div class="buttons-player">
-      <button *ngIf="true" class="play-btn">
-          <i class="uil " [ngClass]="{'uil-play':true}"></i>
-      </button>
-      <button *ngIf="false" class="play-btn">
-          <i class="uil uil-play"></i>
-      </button>
+    <button *ngIf="true" class="play-btn">
+      <i class="uil" [ngClass]="{ 'uil-play': true }"></i>
+    </button>
+    <button *ngIf="false" class="play-btn">
+      <i class="uil uil-play"></i>
+    </button>
   </div>
 </div>
 
 <!--------- Diseño del mode (big)--------->
-<div *ngIf="mode==='big'" class="card-player player-big">
-
+<div *ngIf="mode === 'big'" class="card-player player-big">
   <!-- <img appImgBroken [customImg]="'https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Angular_full_color_logo.svg/2048px-Angular_full_color_logo.svg.png'" [src]="track.cover" alt="" class="cover"> -->
-  <img [src]="track.cover" alt="" class="cover">
-  
+
+  <img
+    appBrokenImg
+    [myCustomImgPlaceholder]="
+      'https://i0.wp.com/stretchingmexico.com/wp-content/uploads/2023/09/placeholder-613.png'
+    "
+    [src]="track.cover"
+    alt=""
+    class="cover"
+  />
+
   <div class="content-player">
-      <div class="title-track">{{track.name}}</div>
-      <div class="sub-title-track">{{track.name}}</div>
+    <div class="title-track">{{ track.name }}</div>
+    <div class="sub-title-track">{{ track.name }}</div>
   </div>
   <div class="buttons-player">
-      <button *ngIf="true" class="play-btn">
-          <i class="uil " [ngClass]="{'uil-play':true}"></i>
-      </button>
-      <button *ngIf="false" class="play-btn">
-          <i class="uil uil-play"></i>
-      </button>
+    <button *ngIf="true" class="play-btn">
+      <i class="uil" [ngClass]="{ 'uil-play': true }"></i>
+    </button>
+    <button *ngIf="false" class="play-btn">
+      <i class="uil uil-play"></i>
+    </button>
   </div>
 </div>
