implement ngmodule ngmodelchange for search input

--- a/src/app/modules/history/components/search/search.component.html
+++ b/src/app/modules/history/components/search/search.component.html
@@ -1,3 +1,9 @@
 <div class="search-component">
-  <input type="text" placeholder="Artistas, canciones" />
+  <input
+    (ngModelChange)="callSearch($event)"
+    [(ngModel)]="src"
+    type="text"
+    placeholder="Artistas, canciones"
+  />
+  <p>Resultado: {{ src }}</p>
 </div>
