--- a/src/app/shared/components/side-bar/side-bar.component.html
+++ b/src/app/shared/components/side-bar/side-bar.component.html
@@ -11,7 +11,7 @@
   </ul>
   <div class="side-bar__separator"></div>
   <ul class="side-bar__list list-two">
-    <li *ngFor="let item of mainMenu.accessLink">
+    <li *ngFor="let item of mainMenu.accessLink" [routerLink]="item.router">
       <div class="list-wrapper-item">
         <i [ngClass]="['uil', item.icon]"></i>
         <span class="side-bar__list list-label">{{ item.name }}</span>
