add pipe async to improve performance

--- a/src/app/modules/history/pages/history-page/history-page.component.html
+++ b/src/app/modules/history/pages/history-page/history-page.component.html
@@ -1,4 +1,4 @@
 <div class="history-page">
   <app-search (cbData)="receiveData($event)"></app-search>
-  <app-play-list-body [tracks]="listResults"></app-play-list-body>
+  <app-play-list-body [tracks]="listResults$ | async"></app-play-list-body>
 </div>
