add functions to listen to events and calculate time elapsed

--- a/src/app/shared/components/media-player/media-player.component.html
+++ b/src/app/shared/components/media-player/media-player.component.html
@@ -49,7 +49,7 @@
       </button>
     </div>
     <div class="media-linetime">
-      <div class="time">00:0</div>
+      <div class="time">{{ _multimediaService.timeElapsed$ | async }}</div>
       <span #progressBar class="time-progress">
         <span class="time-progress-live" [style.width]="10 + '%'"> </span>
       </span>
