add function to calculate and display audio time remaining

--- a/src/app/shared/components/media-player/media-player.component.html
+++ b/src/app/shared/components/media-player/media-player.component.html
@@ -53,7 +53,7 @@
       <span #progressBar class="time-progress">
         <span class="time-progress-live" [style.width]="10 + '%'"> </span>
       </span>
-      <div class="time">99</div>
+      <div class="time">{{ _multimediaService.timeRemaining$ | async }}</div>
     </div>
   </div>
 </ng-template>
