--- a/src/app/shared/components/media-player/media-player.component.html
+++ b/src/app/shared/components/media-player/media-player.component.html
@@ -41,8 +41,15 @@
       <button class="arrow btn">
         <i class="uil uil-previous"></i>
       </button>
-      <button class="play btn">
-        <i class="uil"></i>
+      <button (click)="_multimediaService.togglePlayer()" class="play btn">
+        <i
+          [ngClass]="{
+            'uil-play-circle': myState === 'paused',
+            'uil-pause-circle': myState != 'paused'
+          }"
+          class="uil"
+        ></i>
+        <!-- {{ myState }} -->
       </button>
       <button class="arrow btn">
         <i class="uil uil-step-forward"></i>
